--- a/Illicit.css
+++ b/Illicit.css
@@ -1,22 +1,40 @@
 
 
 body{
-    text-align: center;
     font-family:'Dosis', 'Arial', sans-serif;
     margin: 20px;
     background-color: rgb(154, 154, 154);
 }
 
-h1{
-    font-size: 80px;
-    background-color: rgba(0, 0, 0, 0.193);
-    color:rgb(135, 39, 224);
-    text-shadow: 0 0 3px black;
+span {
+    display: flex;
+    align-items: center;
+    justify-content: center; 
     border-style: solid;
+    background-color: rgba(0, 0, 0, 0.193);
     border-color: rgb(99, 9, 81);
+    padding: 10px;
+    margin: 10px;
+    position: relative; 
 }
 
+h1 {
+    text-align: center;
+    font-size: 80px;
+    color: rgb(135, 39, 224);
+    text-shadow: 0 0 3px black;
+    margin: 0;
+    padding-left: 10px; 
+    flex: 1; 
+}
+
+
+
 h2{
+    text-align: center;
+    border-style: solid;
+    background-color: rgba(0, 0, 0, 0.193);
+    border-color: rgb(99, 9, 81);
     font-size: 60px;
     color: purple;
     text-shadow: 0 0 1px darkred;
@@ -29,9 +47,17 @@ ul{
 }
 
 p{
+    text-align: center;
     padding: 5px;
     font-size: 20px;
 }
+
+iframe{
+    display: block;
+    margin: 0 auto;
+}
+
+
 
 #descriptions{
     font-size: 10px;
@@ -62,16 +88,26 @@ p{
     margin-bottom: 10px;
     font-size: 30px; 
     border: 5px purple solid;
+    background-color: rgba(0, 0, 0, 0.193);
+
 }
 
 .item img {
+    text-align: center;
     width: 250px; 
     margin-top: 10px; 
     margin-bottom: 10px;
 }
+img{
+    
+    background-color: transparent;
+}
 
 
 footer{
+    background-color: rgba(79, 79, 79, 0.193);
+
+    text-align: center;
     padding-top: 10px;
     font-size: smaller;
 }
