--- a/Illicit.css
+++ b/Illicit.css
@@ -4,6 +4,8 @@ body{
     font-family:'Dosis', 'Arial', sans-serif;
     margin: 20px;
     background-color: rgb(154, 154, 154);
+    background:radial-gradient(rgb(154, 154, 154), rgb(156, 122, 145));
+
 }
 
 span {
@@ -110,4 +112,56 @@ footer{
     text-align: center;
     padding-top: 10px;
     font-size: smaller;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 200px;
+    text-align: center;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown-content a {
+    color: black;      /*This is the text color*/
+    padding: 12px 16px;
+    text-decoration: none;
+    font-family:'Dosis', 'Arial', sans-serif;
+
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1ae;
+}
+
+/* Background box behind the image */
+.background-box {
+    position: absolute;
+    top: -5px; 
+    left: -5px; 
+    width: 60px; 
+    height: 60px; 
+    background-color: rgba(255, 255, 255, 0.093); 
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 0; 
+}
+
+.background-box:hover {
+    background-color: #c3c3c38d;
+
 }
