--- a/Illicit.css
+++ b/Illicit.css
@@ -144,7 +144,7 @@ footer{
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: white;
+    background-color: rgba(232, 192, 239, 0.937);
     min-width: 200px;
     text-align: center;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
